--- a/ATeam/Ateam.html
+++ b/ATeam/Ateam.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-<img src="Ateam1.jpg"><br>
-3 issues, 1 collection 1983 Marvel
+<img src="Ateam1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
