--- a/Marvel/Marvel.html
+++ b/Marvel/Marvel.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-<img src="Marvel.jpg"> <br>
-
+<img src="Marvel.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -111,6 +110,7 @@ Previous Titles:
 <li><a href="../4UniverseX/4UniverseX.html">4 Universe X</a> (2000)
 <li><a href="../5Ronin/5Ronin.html">5 Ronin</a> (2011)
 <li><a href="../411/411.html">411</a> (2003)
+<li><a href="../Marvel1602NewWorld/Marvel1602NewWorld.html">1602 New World</a> (2015)
 <li><a href="../1602WitchHunter/1602WitchHunter.html">1602 Witch Hunter</a> (2015)
 <li><a href="../1872Marvel/1872Marvel.html">1872</a> (2015)
 <li><a href="../2099AD/2099AD.html">2099 AD</a> (1995)
@@ -123,14 +123,14 @@ Previous Titles:
 <li><a href="../2099World/2099World.html">2099 AD World of Tomorrow</a>   (1996)
 <li><a href="../ABabiesXBabies/ABabiesXBabies.html">A-Babies vs. X-Babies</a> (2012)
 <li><a href="../A-Force/A-Force.html">A-Force</a> (2015)
-<li>A-Next  (1998)
-<li>A-Team  (1983)
-<li>Abominations    (1996)
-<li>Action Force    (1987)
-<li>Actual Confessions  (1952)
-<li>Adam Warlock    (1972)
-<li>Adam: Legend of the Blue    (2009)
-<li>Adventure Into Fear     (1970)
+<li><a href="../ANext/ANext.html">A-Next</a> (1998)
+<li><a href="../ATeam/Ateam.html">A-Team</a>  (1983)
+<li><a href="../Abominations/Abominations.html">Abominations</a> (1996)
+<li><a href="../ActionForce/actionforce.html">Action Force</a> (1987)
+<li><a href="../LoveAdventures/loveadventures.html">Actual Confessions</a> (1952)
+<li><a href="../AdamWarlock/Warlock.html">Adam Warlock</a> (1972)
+<li><a href="../AdamBlueMarvel/adambluemarvel.html">Adam: Legend of the Blue Marvel</a> (2009)
+<li><a href="../Fear/fear.html">Adventure Into Fear</a> (1970)
 <li>Adventures In Reading   (1990)
 <li>Adventures In The Rifle Brigade     (1990)
 <li>Adventures Into Terror  (1951)
