--- a/PowerhousePepper/PowerhousePepper.html
+++ b/PowerhousePepper/PowerhousePepper.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="PowerhousePepper.jpg" title="Powerhouse Pepper"> <br>
+<img src="PowerhousePepper1.jpg" title="Powerhouse Pepper"> <br>
 Series: 1 issues 1943, 4 issues 1948<br>
 Publisher: Timely (Marvel)<br>
 <p>
@@ -20,11 +20,15 @@ Publisher: Timely (Marvel)<br>
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="PowerhousePepper.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PowerhousePepper1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="PowerhousePepper2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="PowerhousePepper3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="PowerhousePepper4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="PowerhousePepper5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PowerhousePepper6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PowerhousePepper7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PowerhousePepper8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PowerhousePepper9.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
