--- a/index.html
+++ b/index.html
@@ -982,6 +982,13 @@
 </tr>
 
 <tr>
+<td>1602 New World</td>
+<td>2015</td>
+<td>Marvel</td>
+<td><a href="Marvel1602NewWorld/Marvel1602NewWorld.html">Details</a></td>
+</tr>
+
+<tr>
 <td>1602 Witch Hunter</td>
 <td>2015</td>
 <td>Marvel</td>
@@ -51786,6 +51793,13 @@
 <td>2008</td>
 <td>Tidalwave</td>
 <td><a href="Tidalwave/Tidalwave.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mike Zeck</td>
+<td>1949</td>
+<td>Creator</td>
+<td><a href="MikeZeck/MikeZeck.html">Details</a></td>
 </tr>
 
 <tr>
