--- a/Abominations/Abominations.html
+++ b/Abominations/Abominations.html
@@ -2,18 +2,35 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Abominations</title>
 </head>
 
 <body>
-<h2>Abominations</h2>
-<img src="Abominations1.jpg"> <img src="Abominations2.jpg"> <img src="Abominations3.jpg"><br>
+<img src="Abominations1.jpg">
+<p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Abominations1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Abominations2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Abominations3.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Series: 3 issue mini series<br>
 Publisher: 1996 Marvel</a> <br>
-Illustrators: 	Angel Medina, 	Brad Vancata<br>
-Writers: 	Ivan Velez Jr<br> 
-<p>
+Illustrators: 	Angel Medina, Brad Vancata<br>
+Writers: Ivan Velez Jr<br> 
+</p><p>
 About: Abominations is a three issue Marvel Comics limited series that was a follow-up tale from the Incredible Hulk storylines Ghosts of the Past and Future Imperfect. It involves a lot of time travel which makes the storyline difficult to follow.
 </p><p>
 Story: We begin a few weeks after the end of Future Imperfect with a small group of the Gravity Police (the Maestro's soldiers) wandering outside of the city. They were forced to leave the city following the fall of the Maestro and have since run out of supplies. The Abomination kills the soldiers and attempts to takes over Castle Maestro in the city.
