--- a/Fear/fear.html
+++ b/Fear/fear.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="../slideshow.css">
 <script src="../slideshow.js"></script>
-<title>Fear</title>
+<title>Adventure Into Fear</title>
 </head>
 
 <body>
