--- a/AdventuresOfSnakePilssken/adventuresofsnakepilssken.html
+++ b/AdventuresOfSnakePilssken/adventuresofsnakepilssken.html
@@ -2,16 +2,31 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Adventures of Snake Pilssken</title>
 </head>
 
 <body>
-<img src="adventuresofsnakepilssken.jpg"> <br>
-1 issue in 1997 by Marvel<br>
-Illustrator: Dan Brereton (cover), Rod Whigham<br>
-Writer: Len Kaminski<br>
+<img src="adventuresofsnakepilssken1.jpg">
+<p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
 
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="adventuresofsnakepilssken1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="adventuresofsnakepilssken2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="adventuresofsnakepilssken3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="adventuresofsnakepilssken4.jpg"></div>
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+1 issue in 1997 published by Marvel, illustrated by Dan Brereton (cover) and Rod Whigham, written by Len Kaminski.
 <p>
 The story takes place sometime between Escape from New York and before his famous Cleveland escape mentioned in Escape from L.A. Snake has robbed Atlanta's Center for Disease Control of some engineered metaviruses and is looking for buyers in Chicago. Finding himself in a deal that's really a set-up, he makes his getaway and exacts revenge on the buyer for ratting him out to the United States Police Force. 
 </p><p>
