--- a/Marvel/Marvel.html
+++ b/Marvel/Marvel.html
@@ -131,48 +131,47 @@ Previous Titles:
 <li><a href="../AdamWarlock/Warlock.html">Adam Warlock</a> (1972)
 <li><a href="../AdamBlueMarvel/adambluemarvel.html">Adam: Legend of the Blue Marvel</a> (2009)
 <li><a href="../Fear/fear.html">Adventure Into Fear</a> (1970)
-<li>Adventures In Reading   (1990)
-<li>Adventures In The Rifle Brigade     (1990)
-<li>Adventures Into Terror  (1951)
-<li>Adventures of Captain America   (1991)
-<li>Adventures of Cyclops and Phoenix   (1994)
-<li>Adventures of Homer Ghost   (1957)
-<li>Adventures of Snake Plissken    (1997)
-<li>Adventures of Spider-Man    (1996)
-<li>Adventures of the Big Boy   (1956)
-<li>Adventures of the Thing     (1992)
-<li>Adventures on the Planet of the Apes    (1975)
-<li>Age of Apocalypse   (1995)
-<li>Age of Heroes Heroic Age    (2010)
-<li>Age of Innocence: The Rebirth of Iron Man   (2010)
-<li>Age of the Sentry   (2008)
-<li>Age of Ultron   (2013)
-<li>Age of X Alpha  (2011)
-<li>Age of X: Universe  (2011)
-<li>Agent X     (2002)
-<li>Agents of Atlas     (2006)
-<li>Air Raiders     (1987)
-<li>Airtight Garage     (1987)
-<li>Akira   (1982)
-<li>Alias   (2001)
-<li>All New All Different Avengers  (2015)
-<li>All New Doop    (2014)
-<li>All New Ghost Rider     (2014)
-<li>All New Hawkeye     (2015)
-<li>All New Inhumans    (2016)
-<li>All New Invaders    (2014)
-<li>All New Iron Manual     (2008)
-<li>All New  NOW Previews   (2012)
-<li>All New Handbook of the  Universe   (2006)
-<li>All New Savage She-Hulk     (2009)
-<li>All New Ultimates   (2014)
-<li>All New Wolverine   (2015)
-<li>All Select Comics   (1943)
-<li>All Surprise    (1943)
-<li>Alpha Flight    (1983)
-<li>Amazing Adult Fantasy   (1961)
-<li>Amazing Adventures  (1961)
-<li>Amazing Detective Cases     (1950)
+<li><a href="../AdventuresInReading/adventuresinreading.html">Adventures In Reading</a> (1990)
+<li><a href="../AdventuresIntoTerror/AdventuresIntoTerror.html">Adventures Into Terror</a>  (1951)
+<li><a href="../AdventuresOfCaptainAmerica/adventuresofcaptamerica.html">Adventures of Captain America</a> (1991)
+<li><a href="../AdventuresOfCyclopsAndPhoenix/AdventuresCyclopsPhoenix.html">Adventures of Cyclops and Phoenix</a>  (1994)
+<li><a href="../AdventuresOfHomerGhost/AdventuresHomerGhost.html">Adventures of Homer Ghost</a> (1957)
+<li><a href="../AdventuresOfSnakePilssken/adventuresofsnakepilssken.html">Adventures of Snake Plissken</a> (1997)
+<li><a href="../AdventuresOfSpiderman/adventuresofspiderman.html">Adventures of Spider-Man</a> (1996)
+<li><a href="../AdventuresOfTheBigBoy/AdventuresOfTheBigBoy.html">Adventures of the Big Boy</a> (1956)
+<li><a href="../AdventuresOfTheThing/AdventuresOfTheThing.html">Adventures of the Thing</a> (1992)
+<li><a href="../AdventuresOnThePOTA/adventuresonthepota.html">Adventures on the Planet of the Apes</a> (1975)
+<li><a href="../AgeOfApocalypse/AgeOfApocalypse.html">Age of Apocalypse</a> (1995)
+<li><a href="../AgeOfHeroesMarvel/AgeOfHeroesMarvel.html">Age of Heroes Heroic Age</a> (2010)
+<li><a href="../AgeOfInnocenceIronman/AgeOfInnocenceIronman.html">Age of Innocence: The Rebirth of Iron Man</a>   (2010)
+<li><a href="../AgeOfTheSentry/AgeOfTheSentry.html">Age of the Sentry</a> (2008)
+<li><a href="../AgeOfUltron/AgeOfUltron.html">Age of Ultron</a>   (2013)
+<li><a href="../AgeOfXAlpha/AgeOfXAlpha.html">Age of X Alpha</a>  (2011)
+<li><a href="../AgeOfXUniverse/AgeOfXUniverse.html">Age of X: Universe</a> (2011)
+<li><a href="../AgentX/AgentX.html">Agent X</a> (2002)
+<li><a href="../AgentsOfAtlas/AgentsOfAtlas.html">Agents of Atlas</a> (2006)
+<li><a href="../AirRaiders/airraiders.html">Air Raiders</a> (1987)
+<li><a href="../AirtightGarage/AirtightGarage.html">Airtight Garage</a>     (1987)
+<li><a href="../Akira/akira.html">Akira</a> (1982)
+<li><a href="../Alias/alias.html">Alias</a> (2001)
+<li><a href="../AllNewAllDifferentAvengers/AllNewAllDifferentAvengers.html">All New All Different Avengers</a>  (2015)
+<li><a href="../AllNewDoop/Doop.html">All New Doop</a> (2014)
+<li><a href="../AllNewGhostRider/AllNewGhostRider.html">All New Ghost Rider</a> (2014)
+<li><a href="../AllNewHawkeye/allnewhawkeye.html">All New Hawkeye</a> (2015)
+<li><a href="../AllNewInhumans/AllNewInhumans.html">All New Inhumans</a> (2016)
+<li><a href="../AllNewInvaders/AllNewInvaders.html">All New Invaders</a> (2014)
+<li><a href="../AllNewIronman/AllNewIronman.html">All New Iron Manual</a> (2008)
+<li><a href="../AllNewMarvelNow/AllNewMarvelNow.html">All New  NOW Previews</a> (2012)
+<li><a href="../AllNewHandbook/AllNewHandbook.html">All New Handbook of the  Universe</a> (2006)
+<li><a href="../AllNewSheHulk/AllNewSheHulk.html">All New Savage She-Hulk</a> (2009)
+<li><a href="../AllNewUltimates/AllNewUltimates.html">All New Ultimates</a> (2014)
+<li><a href="../AllNewWolverine/AllNewWolverine.html">All New Wolverine</a> (2015)
+<li><a href="../AllSelect/AllSelect.html">All Select Comics</a>   (1943)
+<li><a href="../AllSurprise/AllSurprise.html">All Surprise</a> (1943)
+<li><a href="../AlphaFlight/AlphaFlight.html">Alpha Flight</a> (1983)
+<li><a href="../AmazingFantasy/AmazingFantasy.html">Amazing Adult Fantasy</a> (1961)
+<li><a href="../AmazingFantasy/AmazingFantasy.html">Amazing Adventures</a>  (1961)
+<li><a href="../AmazingDetective/AmazingDetective.html">Amazing Detective Cases</a> (1950)
 <li>Amazing Fantasy     (1961)
 <li>Amazing High Adventure  (1984)
 <li>Amazing Scarlet Spider  (1995)
