--- a/Nam/Nam.html
+++ b/Nam/Nam.html
@@ -2,18 +2,44 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title> the Nam </title>
 </head>
 
 <body>
-<img src="Nam1.jpg"> <br>
-Series: 84 issues 1986-1993<br>
-Publisher: Marvel<br>
-Written by Doug Murray<br>
-Illustrations by Mike Golden, Armando Gill<br>
+<img src="Nam1.jpg">
 <p>
-"First Patrol" Vietnam the way it really was! Join Ed Marks and the men of the 23rd Infantry as they learn to survive in the steaming jungles of Southeast Asia.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Nam1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nam2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nam3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nam4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nam5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nam6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nam7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nam8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nam9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nam10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nam11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nam12.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
+The 'Nam was a war comic book series detailing the U.S. War in Vietnam from the perspective of active-duty soldiers involved in the conflict. It was written by Doug Murray, initially illustrated by Michael Golden, edited by Larry Hama and published by Marvel Comics for seven years beginning in 1986, which was originally intended to roughly parallel the analogous events of the period of major American military involvement in Vietnam from 1965 to 1973. 
+</p><p>
+Issue #1 "First Patrol" Vietnam the way it really was! Join Ed Marks and the men of the 23rd Infantry as they learn to survive in the steaming jungles of Southeast Asia.
 </p>
+
 </body>
 </html>
