--- a/AdventuresOfHomerGhost/AdventuresHomerGhost.html
+++ b/AdventuresOfHomerGhost/AdventuresHomerGhost.html
@@ -2,19 +2,32 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Adventures of Homer Ghost</title>
 </head>
 
 <body>
-<h2>Adventures of Homer Ghost</h2>
-<img src="AdventuresHomerGhost.jpg"> <br>
-Series: 2 issue failure<br>
-Illustrator: Tony DiPreta<br>
-Writer: Stan Lee<br>
-Publisher: 1957 Atlas<br>
+<img src="AdventuresHomerGhost1.jpg">
 <p>
-About: Children's Humor, unsuccessful Casper rip off<br>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AdventuresHomerGhost1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventuresHomerGhost2.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+2 issues in 1957, pulbished by Atlas, Illustrated by Tony DiPreta, and written by Stan Lee<br>
+</p><p>
+Children's Humor, unsuccessful Casper rip off<br>
 </p><p>
 Stories:<ul>
 <li>The gang accidentally helps to capture wanted criminal Tony Toughguy.</li>
