--- a/AirRaiders/airraiders.html
+++ b/AirRaiders/airraiders.html
@@ -2,16 +2,32 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Air Raiders</title>
 </head>
 
 <body>
 <img src="airraiders1.jpg"> 
-<img src="airraiders2.jpg">
-<img src="airraiders3.jpg">
-<img src="airraiders4.jpg">
-<img src="airraiders5.jpg"><br>
+<p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="airraiders1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="airraiders2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="airraiders3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="airraiders4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="airraiders5.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 5 issues 1987-1988 by Marvel<br>
 Illustrator: Kelley Jones<br>
 Writer: Howard Mackie<br>
