--- a/index.html
+++ b/index.html
@@ -79482,6 +79482,13 @@
 </tr>
 
 <tr>
+<td>X-Ray Robot</td>
+<td>2020</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>X'ed</td>
 <td>2015</td>
 <td>Black Mask</td>
