--- a/DCComics/DCComics.html
+++ b/DCComics/DCComics.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<img src="DC_Comics_logo.jpg"> <img src="vertigo_logo.jpg"> <img src="Piranha_press_logo.jpg"> <img src="Helix_logo.jpg"> <img src="All-AmericanComics_logo.jpg">
+<img src="DC1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -52,6 +52,36 @@
 <div class="mySlides" style="text-align: center;"><img src="DC32.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DC34.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DC35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC41.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC42.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC43.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC44.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC45.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC46.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC47.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC48.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC49.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC50.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC51.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC52.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC53.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC54.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC55.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC56.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC57.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC58.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC59.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC60.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC61.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC62.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC63.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC64.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC65.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -113,38 +143,168 @@ Current Titles
 </p><p>
 Current Limited Series
 </p><p>
-<li>Basketful of Heads 
-<li>Birds of Prey 
-<li>Batman: Creature of the Night 
-<li>Batman: Curse of the White Knight 
-<li>Batman: Last Knight on Earth 
-<li>Batman: Universe 
-<li>Batman vs. Ra's al Ghul 
-<li>Collapser 
-<li>Dial H for Hero 
-<li>Flash Forward 
-<li>Freedom Fighters 
-<li>Gotham City Monsters 
-<li>Harleen 
-<li>Harley Quinn and Poison Ivy 
-<li>Inferior Five 
-<li>Joker/Harley: Criminal Sanity 
-<li>Legion of Super-Heroes: Millennium 
-<li>Lois Lane 
-<li>Martian Manhunter 
-<li>Metal Men 
-<li>RWBY 
-<li>Superman Smashes the Klan 
-<li>Superman: Up in the Sky 
-<li>Superman's Pal Jimmy Olsen 
-<li>The Batman's Grave 
-<li>The Joker: Killer Smile 
-<li>The Last God 
-<li>Titans: Burning Rage 
-<li>Wonder Twins 
-<li>Wonder Woman: Come Back to Me 
+<li><a href="DC36.jpg">Basketful of Heads</a> (2019) 
+<li><a href="DC37.jpg">Birds of Prey</a> (2010) 
+<li><a href="DC38.jpg">Batman: Creature of the Night</a> (2018) 
+<li><a href="DC39.jpg">Batman: Curse of the White Knight</a> (2019) 
+<li><a href="DC40.jpg">Batman: Last Knight on Earth</a> (2019) 
+<li><a href="DC41.jpg">Batman: Universe</a> (2019) 
+<li><a href="DC42.jpg">Batman vs. Ra's al Ghul</a> (2019) 
+<li><a href="DC43.jpg">Collapser</a> (2019) 
+<li><a href="DC44.jpg">Dial H for Hero</a> (2019) 
+<li><a href="DC45.jpg">Flash Forward</a> (2019) 
+<li><a href="DC46.jpg">Freedom Fighters</a> (2019) 
+<li><a href="DC47.jpg">Gotham City Monsters</a> (2019)
+<li><a href="DC48.jpg">Harleen</a> (2020) 
+<li><a href="DC49.jpg">Harley Quinn and Poison Ivy</a> (2019) 
+<li><a href="DC50.jpg">Inferior Five</a> (2019) 
+<li><a href="DC51.jpg">Joker/Harley: Criminal Sanity</a> (2019) 
+<li><a href="DC52.jpg">Legion of Super-Heroes: Millennium</a> (2019) 
+<li><a href="DC53.jpg">Lois Lane</a> (2019) 
+<li><a href="DC54.jpg">Martian Manhunter</a> (2019) 
+<li><a href="DC55.jpg">Metal Men</a> (2019) 
+<li><a href="DC56.jpg">RWBY</a> (2019) 
+<li><a href="DC57.jpg">Superman Smashes the Klan</a> (2019) 
+<li><a href="DC58.jpg">Superman: Up in the Sky</a> (2019) 
+<li><a href="DC59.jpg">Superman's Pal Jimmy Olsen</a> (2019) 
+<li><a href="DC60.jpg">The Batman's Grave</a> (2019) 
+<li><a href="DC61.jpg">The Joker: Killer Smile</a> (2019) 
+<li><a href="DC62.jpg">The Last God</a> (2019) 
+<li><a href="DC63.jpg">Titans: Burning Rage</a> (2019) 
+<li><a href="DC64.jpg">Wonder Twins</a> (2019) 
+<li><a href="DC65.jpg">Wonder Woman: Come Back to Me</a> (2020) 
 </p><p>
 
+
+Previous Titles
+</p><p>
+<li><a href="../1stIssueSpecial/1stIssueSpecial.html">1st Issue Special</a> (1975) 	 	
+<li><a href="../3DBatman/3DBatman.html">3-D Batman</a> (1953) 	 	
+<li><a href="../52/52.html">52</a> (2006) 	 	
+<li><a href="../ABizarro/ABizarro.html">A. Bizarro</a> (1999) 	 	
+<li><a href="../Action/ActionComics.html">Action Comics</a> (1938) 	 	
+<li><a href="../AdventureComics/adventurecomics.html">Adventure Comics</a> (1938) 	 	
+<li><a href="../AllAmerican/AllAmerican.html">All American</a> (1939)
+<li><a href="../AllStar/AllStar.html">All Star</a> (1940) 	 	
+<li><a href="../AllStar/AllStar.html">All Star Superman</a> (2006) 	 	
+<li><a href="../AngelAndTheApe/AngelAndTheApe.html">Angel And The Ape</a> (1968) 	
+<li><a href="../Aquaman/Aquaman.html">Aquaman</a> (1962) 	 	
+<li><a href="../AstroCity/AstroCity.html">Astro City</a> (1999) 	 	
+<li><a href="../Atom/Atom.html">Atom</a> (1962) 	 	
+<li><a href="../AtomicKnights/AtomicKnights.html">Atomic Knights</a> (1950) 	 	
+<li><a href="../Authority/Authority.html">Authority</a> (1999) 	 	
+<li><a href="../BalladOfHaloJones/BalladOfHaloJones.html">Ballad Of Halo Jones</a> (2005)
+<li>Bat Lash 	1968
+<li>Batgirl 	2000 	 	
+<li>Batman 	1939 	 	
+<li>Batman And The Outsiders 	2019 	 	
+<li>Batman The Dark Knight Returns 	1986 	 	
+<li>Batman The Killing Joke 	1988 	 	
+<li>Batman versus Predator II 	1992 	 	
+<li>Batman Year One 	1987 	 	
+<li>Batwoman 	1993 	 	
+<li>Beware The Creeper 	1968 	 	
+<li>Birds Of Prey 	1999 	 	
+<li>Black Canary 	1947 	 	
+<li>Black Orchid 	1938 	 	
+<li>Boy Commandos 	1942 	 	
+<li>Brave And The Bold 	1955 	 	
+<li>Camelot 3000 	1985 	 	
+<li>Catwoman 	1972 	 	
+<li>Cave Carson 	2016 	 	
+<li>Challengers Of The Unknown 	1958 	 	
+<li>Chase 	1998 	 	
+<li>Cosmic Odyssey 	1988 	 	
+<li>Crisis On Infinite Earths 	1985 	 	
+<li>DC vs. Marvel 	1996 	 	
+<li>Daredevil And Batman 	1997 	 	
+<li>Dark Knight Returns 	1986 	 	
+<li>DC: The New Frontier 	2004 	 	
+<li>Deadman 	1985 	 	
+<li>Deathstroke 	1991 	 	
+<li>Demon 	1972 	 	
+<li>Desolation Jones 	2005 	 	
+<li>Detective Comics 	1937 	 	
+<li>Doctor Fate 	1940 	 	
+<li>Doom Patrol 	2017 	 	
+<li>Doorway to Nightmare 	1978 	 	
+<li>Flash 	1959 	 	
+<li>Flash Rebirth 	2009 	 	
+<li>Flex Mentallo 	1996 	 	
+<li>Forever People 	1971 	 	
+<li>Funny Stuff 	1944 	 	
+<li>Ghosts 	1971 	 	
+<li>Gotham Academy 	2015 	 	
+<li>Gotham Central 	2003 	 	
+<li>Grayson 	2017 	 	
+<li>Green Arrow 	1941 	 	
+<li>Green Lantern 	1941 	 	
+<li>Gregory 	1989 	 	
+<li>Halo Jones 	2005 	 	
+<li>Harley Quinn 	2016 	 	
+<li>Hawkman 	1964 	 	
+<li>History Of Violence 	2005 	 	
+<li>Hitman 	2005 	 	
+<li>House Of Mystery 	1951 	 	
+<li>House Of Secrets 	1956 	 	
+<li>House Of Whispers 	2018 	 	
+<li>Injustice 	2013 	 	
+<li>JLA 	1997 	 	
+<li>Jonah Hex 	1977 	 	
+<li>Justice League 	2018 	 	
+<li>Justice League Dark 	2018 	 	
+<li>Justice League Odyssey 	2018 	 	
+<li>Justice League Of America 	1960 	 	
+<li>Kamandi 	1972 	 	
+<li>Killing Joke 	1988 	 	
+<li>Kingdom Come 	1996 	 	
+<li>Legion Of Super-Heroes 	1973 	 	
+<li>Lobo 	1993 	 	
+<li>Mad Magazine 	2018 	 	
+<li>Metal Men 	1963 	 	
+<li>Midnighter 	2007 	 	
+<li>Mister Miracle 	1971 	 	
+<li>Multiversity 	2014 	 	
+<li>New Gods 	1971 	 	
+<li>Nightwing 	2016 	 	
+<li>Omega Men 	1983 	 	
+<li>Orion 	2000 	 	
+<li>Planetary 	1999 	 	
+<li>Psycho 	1991 	 	
+<li>Red Hood And The Outlaws 	2016 	 	
+<li>Ronin 	1983 	 	
+<li>Saga Of The Swamp Thing 	1982 	 	
+<li>Scribbly 	1948 	 	
+<li>Scribbly 	1948 	 	
+<li>Sea Devils 	1961 	 	
+<li>Sensation Comics 	1942 	 	
+<li>Sgt. Rock 	1977 	 	
+<li>Shade The Changing Girl 	2017 	 	
+<li>Shade The Changing Man 	1977 	 	
+<li>Shazam! 	2018 	 	
+<li>Spectre 	1940 	 	
+<li>Starman 	1988 	 	
+<li>Strange Adventures 	1950 	 	
+<li>Sugar And Spike 	1956 	 	
+<li>Suicide Squad 	1987 	 	
+<li>Supergirl 	2016 	 	
+<li>Superman 	1933 	 	
+<li>Swamp Thing 	1982 	 	
+<li>Tales Of The Unexpected 	1956 	 	
+<li>Teen Titans 	1966 	 	
+<li>Terrifics 	2018 	 	
+<li>Tor 	1975 	 	
+<li>Trillium 	2013 	 	
+<li>Unexpected 	1968 	 	
+<li>Vigilante 	1983 	 	
+<li>Warlord 	1976 	 	
+<li>Wasteland 	1987 	 	
+<li>Watchmen 	1986 	 	
+<li>Weird War Tales 	1971 	 	
+<li>Wild Storm 	2017 	 	
+<li>Witching Hour 	1969 	 	
+<li>Wonder Woman 	1942 	 	
+<li>Zatanna 	1993 	 	
 
 </p>
 </body>
