--- a/index.html
+++ b/index.html
@@ -21616,13 +21616,6 @@
 </tr>
 
 <tr>
-<td>D. C. vs. Marvel</td>
-<td>1996</td>
-<td>DC</td>
-<td><a href="MarvelVsDC/MarvelVsDC.html">Details</a></td>
-</tr>
-
-<tr>
 <td>D. Gray-Man</td>
 <td>2006</td>
 <td>Viz</td>
@@ -22956,6 +22949,13 @@
 <td>1903</td>
 <td>Publisher</td>
 <td><a href="DCThomson/DCThomson.html">Details</a></td>
+</tr>
+
+<tr>
+<td>DC vs. Marvel</td>
+<td>1996</td>
+<td>DC</td>
+<td><a href="MarvelVsDC/MarvelVsDC.html">Details</a></td>
 </tr>
 
 <tr>
