--- a/DCComics/DCComics.html
+++ b/DCComics/DCComics.html
@@ -194,20 +194,20 @@ Previous Titles
 <li><a href="../AtomicKnights/AtomicKnights.html">Atomic Knights</a> (1950) 	 	
 <li><a href="../Authority/Authority.html">Authority</a> (1999) 	 	
 <li><a href="../BalladOfHaloJones/BalladOfHaloJones.html">Ballad Of Halo Jones</a> (2005)
-<li>Bat Lash 	1968
-<li>Batgirl 	2000 	 	
-<li>Batman 	1939 	 	
-<li>Batman And The Outsiders 	2019 	 	
-<li>Batman The Dark Knight Returns 	1986 	 	
-<li>Batman The Killing Joke 	1988 	 	
-<li>Batman versus Predator II 	1992 	 	
-<li>Batman Year One 	1987 	 	
-<li>Batwoman 	1993 	 	
-<li>Beware The Creeper 	1968 	 	
-<li>Birds Of Prey 	1999 	 	
-<li>Black Canary 	1947 	 	
-<li>Black Orchid 	1938 	 	
-<li>Boy Commandos 	1942 	 	
+<li><a href="../BatLash/BatLash.html">Bat Lash</a> (1968)
+<li><a href="../Batgirl/Batgirl.html">Batgirl</a> (2000)
+<li><a href="../Batman/Batman.html">Batman</a> (1939) 	 	
+<li><a href="DC66.jpg">Batman And The Outsiders</a> (1983) 	 	
+<li><a href="../BatmanTheDarkKnight/BatmanTheDarkKnight.html">Batman The Dark Knight Returns</a> (1986) 	 	
+<li><a href="../BatmanTheKillingJoke/BatmanTheKillingJoke.html">Batman The Killing Joke</a> (1988) 	 	
+<li><a href="../BatmanVsPredatorII/BatmanVsPredatorII.html">Batman versus Predator II</a> (1992)
+<li><a href="../BatmanYearOne/BatmanYearOne.html">Batman Year One</a> (1987) 	 	
+<li><a href="../Batwoman/Batwoman.html">Batwoman</a> (1993) 	 	
+<li><a href="../BewareTheCreeper/BewareTheCreeper.html">Beware The Creeper</a> (1968) 	 	
+<li><a href="../BirdsOfPrey/BirdsOfPrey.html">Birds Of Prey</a> (1999) 	 	
+<li><a href="../BlackCanary/BlackCanary.html">Black Canary</a> (1947) 	 	
+<li><a href="../BlackOrchid/BlackOrchid.html">Black Orchid</a> (1938) 	 	
+<li><a href="../BoyCommandos/BoyCommandos.html">Boy Commandos</a> (1942) 	 	
 <li>Brave And The Bold 	1955 	 	
 <li>Camelot 3000 	1985 	 	
 <li>Catwoman 	1972 	 	
