--- a/DrawnQuarterly/DrawnQuarterly.html
+++ b/DrawnQuarterly/DrawnQuarterly.html
@@ -283,6 +283,7 @@ Titles
 <li><a href="DrawnQuarterly83.jpg">Hicksville</a>   (2001)  
 <li><a href="DrawnQuarterly84.jpg">Hospital Suite</a>   (2014) 
 <li><a href="../Hostage/Hostage.html">Hostage</a>  (2017) 
+<li><a href="DrawnQuarterly172.jpg">Hot Potatoe</a>  (2019) 
 <li><a href="DrawnQuarterly85.jpg">Humphry Osmond: Psychedelic Pioneer and the Doors of Perception</a> (1998)
 <li><a href="DrawnQuarterly86.jpg">Hundreds of Feet Below Daylight</a> (1998)
 <li><a href="../ChesterBrown/ChesterBrown.html">I Never Liked You</a> (1994)
@@ -344,6 +345,7 @@ Titles
 <li><a href="DrawnQuarterly136.jpg">Portraits from Life</a> (2001)
 <li><a href="DrawnQuarterly137.jpg">Present</a> (2017)
 <li><a href="DrawnQuarterly138.jpg">Property</a> (2013) 
+<li><a href="DrawnQuarterly173.jpg">Pure Pajamas</a> (2011) 
 <li><a href="DrawnQuarterly139.jpg">Rage of Poseidon</a> (2013)  
 <li><a href="DrawnQuarterly140.jpg">Red Colored Elegy</a>  (2008)    
 <li><a href="DrawnQuarterly141.jpg">Rolling Blackouts: Dispatches from Turkey, Syria, and Iraq</a> (2016)
