--- a/Fantagraphics/Fantagraphics.html
+++ b/Fantagraphics/Fantagraphics.html
@@ -165,6 +165,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics143.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics144.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics145.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics146.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -307,6 +308,7 @@ Titles
 <li><a href="Fantagraphics96.jpg">Mike Regan</a> (1993)
 <li><a href="Fantagraphics97.jpg">Misty Girl Extreme</a> (1997)
 <li><a href="Fantagraphics98.jpg">MOME</a> (2005)
+<li><a href="Fantagraphics146.jpg">Mort Cinder</a> (2018)
 <li><a href="../MyFavoriteThingIsMonsters/MyFavoriteThingIsMonsters.html">My Favorite Thing Is Monsters</a> (2017)
 <li><a href="Fantagraphics99.jpg">Nancy Complete Dailies</a> (2012)
 <li><a href="Fantagraphics100.jpg">Naughty Bits</a> (1991)
