--- a/index.html
+++ b/index.html
@@ -26617,14 +26617,7 @@
 <td>Publisher</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
 </tr>
-
-<tr>
-<td>Drawn &amp Quarterly Magazine</td>
-<td>1990</td>
-<td>Drawn &amp; Quarterly</td>
-<td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
-</tr>
-
+    
 <tr>
 <td>Drawn &amp; Quarterly Magazine</td>
 <td>1990</td>
@@ -39442,6 +39435,13 @@
 <td>2018</td>
 <td>Aftershock</td>
 <td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hot Potatoe</td>
+<td>2019</td>
+<td>Drawn &amp; Quarterly</td>
+<td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
 </tr>
 
 <tr>
@@ -52795,11 +52795,19 @@
 <td>Comico</td>
 <td><a href="Comico/Comico.html">Details</a></td>
 </tr>
+
 <tr>
 <td>More Collected Adventures of Captain Jack</a>
 <td>1996</td>
 <td>MU Press</td>
 <td><a href="MUPress/MUPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mort Cinder</td>
+<td>2018</td>
+<td>Fantagraphics</td>
+<td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -60396,6 +60404,13 @@
 <td>1990</td>
 <td>Northstar</td>
 <td><a href="NorthstarPublishing/NorthstarPublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pure Pajamas</td>
+<td>2011</td>
+<td>Drawn &amp; Quarterly</td>
+<td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
 </tr>
 
 <tr>
